k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-api
  labels:
    project: amazon-api
    owner: isra
