k8s/deployment-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: amazon-api
  labels:
    app: gateway
    tier: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
        tier: gateway
    spec:
      containers:
        - name: gateway
          image: israelhf24/gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
