k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-api-users-deployment
  namespace: amazon-api
  labels:
    app: amazon-api-users
    tier: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: amazon-api-users
  template:
    metadata:
      labels:
        app: amazon-api-users
        tier: backend
    spec:
      containers:
        - name: amazon-api-users
          image: ${DOCKERHUB_USERNAME}/amazon-api-users:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /users-api/hello
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /users-api/hello
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
