k8s/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: amazon-api
  labels:
    app: jenkins
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30081
    protocol: TCP
    name: http
  - port: 50000
    targetPort: 50000
    nodePort: 30050
    protocol: TCP
    name: agent
  selector:
    app: jenkins
