k8s/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: amazon-api
  labels:
    app: gateway
    tier: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 30083
      protocol: TCP
